Fixes #3 (Crash in Database constructor). Cleaned up import and Netbeans warnings